--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,6 +1,9 @@
+@import 'mvc/ModalView.scss';
+
 
 @import '_LatestEarthquakes.scss';
 @import '_mmi-variables.scss';
+
 
 @import 'core/_Formatter.scss';
 
